# polrev-django

./: .env  .env.dev.example  .env.prod.example  .envrc  .gitignore  Dockerfile  LICENSE  README.md  docker-compose (copy 1).yml  docker-compose (copy 2).yml  docker-compose.dev.yml  docker-compose.override (copy 1).yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  package.json  pyproject.toml  web-entrypoint.sh  webpack.config.js
dockeroid/: LICENSE.txt  README.md  pyproject.toml
dockeroid/dockeroid/: __init__.py  cli.py  main.py
polrev/: Dockerfile  Dockerfile (copy)  Dockerfile2  Dockerfile3  Dockerfile_2  celery-entrypoint.sh  db.json  docker-entrypoint.sh  entrypoint.dev.sh  entrypoint.sh  gunicorn.conf.py  manage.py  package copy.json  package.json  polrev.xml  pyproject.toml  web-entrypoint.sh  webpack.config.js
polrev/accounts/: admin.py  apps.py  forms.py  models.py  schema.py  serializers.py  urls.py  views.py
polrev/accounts/migrations/: 0001_initial.py
polrev/areas/: apps.py
polrev/areas/admin/: __init__.py  congressional_district_admin.py  county_admin.py  county_council_district_admin.py  county_judicial_precinct_admin.py  legislative_district_admin.py  local_council_district_admin.py  place_admin.py  school_district_admin.py  state_admin.py  state_judicial_district_admin.py
polrev/areas/forms/: __init__.py  area_forms.py  county_council_district_forms.py  local_council_district_forms.py
polrev/areas/migrations/: 0001_initial.py  0002_alter_area_kind.py  0002_auto_20220224_0800.py  0002_statejudicialdistrict.py  0003_alter_statejudicialdistrict_district_num.py  0003_auto_20220302_0727.py  0003_circuitcourt_districtcourt_federalcourt_precinctcourt.py  0004_alter_congressionaldistrict_cd_fips.py  0004_auto_20220428_1613.py  0005_county.py  0005_federaldistrictcourt_statecircuitcourt_statedistrictcourt.py  0006_auto_20220305_0610.py  0006_auto_20220428_1704.py  0007_auto_20220428_1723.py  0007_place.py  0008_auto_20220305_0832.py  0008_auto_20220428_1726.py  0009_countyjudicialprecinct_statejudicialdistrict.py  0009_place.py  0010_auto_20220305_0946.py  0011_localcouncildistrict.py  0012_countycouncildistrict.py  0013_auto_20220313_0833.py  0014_alter_area_kind.py  0015_auto_20220313_0909.py  0016_schooldistrict.py
polrev/areas/models/: __init__.py  area.py  circuit_court.py  congressional_district.py  county.py  county_council_district.py  county_judicial_precinct.py  district_court.py  federal_court.py  federal_judicial_district.py  legislative_district.py  local_council_district.py  place.py  precinct_court.py  school_district.py  state.py  state_judicial_circuit.py  state_judicial_district.py
polrev/areas/views/: __init__.py  congressional_district_views.py  county_council_district_views.py  county_judicial_precinct_views.py  county_views.py  legislative_district_views.py  local_council_district_views.py  place_views.py  school_district_views.py  state_house_views.py  state_judicial_district_views.py  state_senate_views.py
polrev/areas/wagtail_hooks/: __init__.py  congressional_district_hooks.py  county_council_district_hooks.py  county_hooks.py  county_judicial_precinct_hooks.py  federal_court_hooks.py  legislative_district_hooks.py  local_council_district_hooks.py  place_hooks.py  school_district_hooks.py  state_hooks.py  state_judicial_district_hooks.py
polrev/areas/widgets/: __init__.py  congressional_district_widgets.py  county_council_district_widgets.py  county_judicial_precinct_widgets.py  county_widgets.py  legislate_district_widgets.py  local_council_district_widgets.py  place_widgets.py  school_district_widgets.py  state_judicial_district_widgets.py
polrev/assets/: birdsong.js  fontawesome.js  iframe.js  image.js  main.js  package.json  webpack.config.js
polrev/assets/scss/: _fonts.scss  _overrides.scss  _variables.scss  birdsong.scss  calendar.scss  index.scss  puput.scss  richtext.scss  slack.scss  style.scss  style_2.scss
polrev/blog/: context_processors.py  models.py
polrev/campaigns/: urls.py  views.py
polrev/campaigns/migrations/: 0001_initial.py  0002_auto_20220405_1337.py  0002_auto_20220418_0659.py  0002_countycampaignpage_countycampaignpagebase_countycouncilcampaignpage_localcampaignpage_localcampaignp.py  0003_alter_campaignpage_date.py  0003_auto_20220405_1343.py  0003_statejudicialdistrictcampaignpage.py  0004_auto_20220417_0902.py  0004_campaignspage_year_page.py  0005_auto_20220506_0559.py  0006_alter_campaignpage_state_fips.py
polrev/campaigns/models/: __init__.py  campaign.py  campaigns.py  campaigns_base.py  county.py  county_council.py  local.py  local_council.py  school_district.py  state.py  state_house.py  state_judicial_district.py  state_senate.py  us_house.py  us_senate.py  year.py
polrev/campaigns/templatetags/: custom_tags.py
polrev/candidates/: apps.py  models.py  urls.py  views.py
polrev/candidates/migrations/: 0001_initial.py  0002_auto_20220202_2038.py  0002_initial.py  0003_candidatepage_state.py  0003_statecandidatepage.py  (+2 more)
polrev/docs/: SHORTCODES.md
polrev/dump/: 20220301.json  20220301_redo.json  2022214.json  2022216.json  greatest.json  latest.json  original.json
polrev/elections/: urls.py  views.py
polrev/events/: admin.py  models.py  urls.py  views.py  wagtail_hooks.py
polrev/forms/: models.py
polrev/home/: admin.py  forms.py  image_formats.py  models.py  schema.py  urls.py  views.py
polrev/info/: models.py
polrev/mailer/: panels.py  wagtail_hooks.py
polrev/newsletter/: models.py  panels.py  wagtail_hooks.py
polrev/offices/: apps.py
polrev/parties/: admin.py  apps.py  models.py  views.py
polrev/polrev/: __about__.py  blocks.py  celery.py  context_processors.py  models.py  monkey_patch.py  storages.py  urls.py  wsgi.py
polrev/reddit/: apps.py  tasks.py
polrev/search/: views.py
polrev/slack_invite/: apps.py  forms.py  urls.py  views.py
polrev/states/: apps.py  models.py
polrev/usa/: __init__.py  states.py
polrev/volunteers/: apps.py  urls.py  views.py
polrev/wagtail_forms/: models.py
(+321 files in other folders)
