#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "polrev-root"
version = "0.1.0"
description = ''
readme = "README.md"
requires-python = ">=3.10"
#license = "MIT"
keywords = []
authors = [
  { name = "kfields", email = "kurtisfields@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/polrev-github/polrev-django#readme"
Issues = "https://github.com/polrev-github/polrev-django/issues"
Source = "https://github.com/polrev-github/polrev-django"
