[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dockeroid"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [{ name = "kfields", email = "kurtisfields@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["click ~= 8.1.8", "Jinja2 ~= 3.1.5", "PyYAML ~=6.0.2"]

[project.urls]
Documentation = "https://github.com/kfields/dockeroid#readme"
Issues = "https://github.com/kfields/dockeroid/issues"
Source = "https://github.com/kfields/dockeroid"

[project.gui-scripts]
dockeroid = 'dockeroid.cli:cli'

[tool.hatch.version]
path = "dockeroid/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:dockeroid tests}"

[tool.coverage.run]
source_pkgs = ["dockeroid", "tests"]
branch = true
parallel = true
omit = ["dockeroid/__about__.py"]

[tool.coverage.paths]
dockeroid = ["dockeroid", "*/dockeroid/dockeroid"]
tests = ["tests", "*/dockeroid/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
