#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[tool.setuptools]
packages = []

[project]
name = "polrev"
#dynamic = ["version"]
version = "0.1.0"
description = ''
#readme = "README.md"
requires-python = ">=3.10"
#license = "MIT"
keywords = []
authors = [{ name = "kfields", email = "kurtisfields@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "loguru ~= 0.7.3",
    "python-dotenv ~= 1.0.1",
    "django ~= 5.1.4",
    "wagtail ~= 6.3.2",

    #django-el-pagination = "^4.1.2"
    "django-el-pagination ~= 4.0.0",
    "django-social-share ~= 2.3.0",

    #puput = "^2.1.1"
    "puput @ git+https://github.com/APSL/puput.git",

    "django-allauth ~= 65.3.1",
    "PyJWT ~= 2.10.1",
    "cryptography ~= 44.0.0",

    "django-bootstrap5 ~= 24.3",

    "django-crispy-forms ~= 2.3",
    "crispy-bootstrap5 ~= 2024.10",

    "django-avatar ~= 8.0.1",
    "django-comments-xtd ~= 2.10.2",
    #wagtail-markdown = "^0.12.1"
    "wagtail-markdown ~= 0.11.1",
    "wagtail-modeladmin ~= 2.1.0",
    "lxml ~= 5.3.0",
    "psycopg2-binary ~= 2.9.10",
    "django-storages ~= 1.14.4",
    "boto3 ~= 1.35.96",
    "django-cors-headers ~= 4.6.0",
    "django-dbbackup ~= 4.2.1",
    "django-tz-detect ~= 0.5.0",
    "tzdata ~= 2024.2",
    "uvicorn ~= 0.34.0",
    "gunicorn ~= 23.0.0",
    #"gunicorn ~= 22.0.0",
    "wagtail-autocomplete ~= 0.11.0",
    "django-timezone-field ~= 7.1",
    "num2words ~= 0.5.14",
    "holidays ~= 0.64",
    "icalendar ~= 6.1.0",
    "feedgen ~= 1.0.0",
    "django-model-utils ~= 5.0.0",
    "us ~= 3.2.0",
    "wagtail-generic-chooser ~= 0.6.1",
    "chardet ~= 5.2.0",
    "django-colorfield ~= 0.11.0",
    "praw ~= 7.8.1",
    "celery ~= 5.4.0",
    "django-celery-beat ~= 2.7.0",
    "redis ~= 5.2.1",
    "django-redis ~= 5.4.0",
    "django-user-agents ~= 0.4.0",
]

[project.urls]
Documentation = "https://github.com/polrev-github/polrev-django#readme"
Issues = "https://github.com/polrev-github/polrev-django/issues"
Source = "https://github.com/polrev-github/polrev-django"

[tool.hatch.metadata]
allow-direct-references = true

#[tool.hatch.version]
#path = "polrev/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:polrev tests}"

[tool.coverage.run]
source_pkgs = ["polrev", "tests"]
branch = true
parallel = true
omit = ["polrev/__about__.py"]

[tool.coverage.paths]
polrev = ["polrev", "*/polrev/polrev"]
tests = ["tests", "*/polrev/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
